2003-12-29  Yoann Vandoorselaere  <yoann@prelude-ids.org>

	* plugins.rules.in: remove paxmod. Obsoleted.

2003-12-26  Nicolas Delon  <delon.nicolas@wanadoo.fr>

	* src/lml-alert.c:
	(send_heartbeat_cb)
	call prelude_msgbuf_mark_end() to flush the alert

2003-12-26  Yoann Vandoorselaere  <yoann@prelude-ids.org>

	* src/lml-alert.c (generate_target): 
	if target_user is set add to the alert.
	(lml_emit_alert): call prelude_msgbuf_mark_end() to flush
	the alert.

	* src/pconfig.c (pconfig_set): workaround prelude-getopt
	flaw...

	* src/file-server.c (file_server_wake_up): 
	(initialize_fam): don't try to initialize fam on
	each file monitored in case fam initialization fail once.

	* src/pconfig.c (set_logwatch): remove new logfile
	configuration scheme for now, it's not ready yet.
	(set_file): create the log_file_t object here, and
	set the format according to the last format variable
	value (default is syslog if not set). Option order is
	respected.

2003-12-22  Nicolas Delon  <delon.nicolas@wanadoo.fr>

	* plugins/simple/ruleset/*.rules:
	change all impact.* to assessement.impact.*

2003-12-21  Yoann Vandoorselaere  <yoann@prelude-ids.org>

	* plugins/simple/simple.c (parse_rule_object_value): 
	fix a typo.

	* src/pconfig.c (pconfig_set, set_logwatch): 
	comment call to prelude_option_parse_from_context
	for now so that LML is usable...

2003-12-21  Yoann Vandoorselaere  <yoann@prelude-ids.org>

	* plugins/simple/simple.c: 
	some code simplification. Include patch from 
	Nicolas Delon, (2003-12-20 Changelog entry).

2003-12-20  Nicolas Delon  <delon.nicolas@wanadoo.fr>

	* plugins/debug/debug.c:
	* plugins/pax/pax.c:
	* plugins/simple/simple.c:
	* plugins/simple/ruleset/checkpoint.rules:
	* plugins/simple/ruleset/cisco.rules:
	* plugins/simple/ruleset/exim.rules:
	* plugins/simple/ruleset/grsecurity.rules:
	* plugins/simple/ruleset/ipchains.rules:
	* plugins/simple/ruleset/ipfw.rules:
	* plugins/simple/ruleset/ipso.rules: